src/scss/components/_card.scss
.card {
  background-color: $WHITE;
  width: 100%;
  max-width: 370px;
  &__wrapper {
    @include flex(center, center);
  }
  &__image {
    display: flex;
    position: relative;
    z-index: 1;
    width: 100%;
    height: 100%;
    max-width: 370px;
    max-height: 240px;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    object-fit: cover;
  }
  &__inner {
    padding: 25px 30px 30px 20px;
  }
  &__title {
    @include text($H22, 700, $TITLE-COLOR);
    font-family: $BASE-FONT;
    text-transform: uppercase;
    margin-bottom: 10px;
    line-height: 1.7;
    max-width: 320px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  &__description {
    @include text($H18, 400, $BASE-FONT-COLOR);
    font-family: $SECONDARY-FONT;
    line-height: 1.6;
    margin-bottom: 40px;
    max-width: 320px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  &__avatar-inner {
    @include flex(flex-start, center, row);
  }
  &__avatar-image {
    margin-right: 20px;
  }
  &__avatar-wrapper {
    @include flex(flex-start, flex-start, column);
  }
  &__avatar-name {
    @include text($H18, 400, $TITLE-COLOR);
    font-family: $SECONDARY-FONT;
    text-transform: uppercase;
    margin-bottom: 10px;
  }
  &__avatar-date {
    @include text($H14, 400, $BLUE);
    font-family: $SECONDARY-FONT;
  }
}

